[package]
name = "aoc"
version = "0.1.0"
authors = ["Mark Hindess <soft-github@temporalanomaly.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
slow_tests = []

[dependencies]
rust-crypto = "^0.2"
itertools = "^0.10.0"
num = "0.3.1"
json = "0.12.4"
rand = "0.8.2"
