[package]
name = "aoc"
version = "0.1.0"
authors = ["Mark Hindess <soft-github@temporalanomaly.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
slow_tests = []

[dependencies]
itertools = "^0.10"
num = "^0.4"
json = "0.12.4"
rand = "^0.8"
mod_exp = "1.0.1"
md5 = "0.7.0"
indexmap = "1.9.2"
