[package]
name = "aoc"
version = "0.1.0"
authors = ["Mark Hindess <soft-github@temporalanomaly.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
slow_tests = []

[dependencies]
itertools = "^0.10"
num = "^0.4"
json = "0.12.4"
rand = "^0.8"
mod_exp = "1.0.1"
md5 = "0.7.0"
indexmap = "1.9.2"
priority-queue = "1.3.0"
rustc-hash = "1.1.0"
arrayvec = "0.7.2"
ahash = "0.8.6"
nom = "7.1.1"
nohash-hasher = "0.2.0"
stats_alloc = "0.1.10"
smallvec = { version = "1.11.2", features = ["drain_filter"] }
heapless = "0.7.16"
zerocopy = "0.7.31"

[dev-dependencies]
criterion = "0.5"
zerocopy = "0.7.31"

[[bench]]
name = "read"
harness = false

[profile.release]
debug = true
